--- a/index.html
+++ b/index.html
@@ -5,22 +5,34 @@
 </head>
 <body>
 
-    <h1>Alex Bradley</h1>
-    <h2>Aspiring Software Developer</h2>
-    <hr/>
-    <h3>About Me</h3>
-    <p>I’ve been working in the construction industry over 
-        the past five years, however I am currently seeking 
-        opportunities to start my career in programming. </p>
-    <p>
-        Over the past two years, I have spent my free time 
-        exploring the world of code. Through FreeCodeCamp, I 
-        have learnt the fundamentals of HTML, CSS and 
-        Javascript. I then went on to further my learning by 
-        enrolling in W3Cx’s course, ‘Introduction to Programming 
-        Using Javascript’. Since then I have enrolled into the 
-        Manchester Codes 24 week Software Developer bootcamp. 
-    </p>
+    <header>
+        <h1>Alex Bradley</h1>
+        <h2>Aspiring Software Developer</h2>
+        <hr/>
+    </header>
+
+    <main>
+        <section>
+            <h3>About Me</h3>
+        </section>
+        
+        <p>I’ve been working in the construction industry over 
+            the past five years, however I am currently seeking 
+            opportunities to start my career in programming. </p>
+        <p>
+            Over the past two years, I have spent my free time 
+            exploring the world of code. Through FreeCodeCamp, I 
+            have learnt the fundamentals of HTML, CSS and 
+            Javascript. I then went on to further my learning by 
+            enrolling in W3Cx’s course, ‘Introduction to Programming 
+            Using Javascript’. Since then I have enrolled into the 
+            Manchester Codes 24 week Software Developer bootcamp. 
+        </p>
+    </main>
+
+    <footer>
+        <p>2022 APBradley</p>
+    </footer>
 </body>
 </body>
 </html>
