--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <header>
         <h1>Alex Bradley</h1>
         <h2>Aspiring Software Developer</h2>
+        <nav>
+            <a href="../pages/contact.html" target="_blank">Contact Me</a> <a href="../pages/projects.html" target="_blank">Projects</a>
+        </nav>
         <hr/>
     </header>
 
