--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 
     <header>
         <h1>Alex Bradley</h1>
+        <figure>
+            <img src="../images/my-image.jpeg" alt="Self portrait">
+            <br/>
+            <figcaption>
+                Alex Bradley
+            </figcaption>
+        </figure>
         <h2>Aspiring Software Developer</h2>
         <nav>
             <a href="../pages/contact.html" target="_blank">Contact Me</a> <a href="../pages/projects.html" target="_blank">Projects</a>
@@ -31,6 +38,19 @@
             Using Javascript’. Since then I have enrolled into the 
             Manchester Codes 24 week Software Developer bootcamp. 
         </p>
+        <figure>
+            <img src="../images/united.jpeg" alt="Manchester United">
+            <br/>
+            <figcaption>
+                My favorite team
+            </figcaption>
+
+            <img src="../images/oasis.jpeg" alt="Oasis">
+            <br/>
+            <figcaption>
+                My favorite band
+            </figcaption>
+        </figure>
     </main>
 
     <footer>
