--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header>
         <h1>Alex Bradley</h1>
         <figure>
-            <img src="../images/my-image.jpeg" alt="Self portrait">
+            <img src="./images/my-image.jpeg" alt="Self portrait">
             <br/>
             <figcaption>
                 Alex Bradley
@@ -16,7 +16,7 @@
         </figure>
         <h2>Aspiring Software Developer</h2>
         <nav>
-            <a href="../pages/contact.html" target="_blank">Contact Me</a> <a href="../pages/projects.html" target="_blank">Projects</a>
+            <a href="./pages/contact.html" target="_blank">Contact Me</a> <a href="./pages/projects.html" target="_blank">Projects</a>
         </nav>
         <hr/>
     </header>
@@ -39,13 +39,13 @@
             Manchester Codes 24 week Software Developer bootcamp. 
         </p>
         <figure>
-            <img src="../images/united.jpeg" alt="Manchester United">
+            <img src="./images/united.jpeg" alt="Manchester United">
             <br/>
             <figcaption>
                 My favorite team
             </figcaption>
 
-            <img src="../images/oasis.jpeg" alt="Oasis">
+            <img src="./images/oasis.jpeg" alt="Oasis">
             <br/>
             <figcaption>
                 My favorite band
